login implemented and tested

--- a/BookLibraryClient/src/app/admin-dashboard/components/genres/add-genre/add-genre.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/genres/add-genre/add-genre.component.html
@@ -50,5 +50,5 @@
         </div>
       </div>
     </div>
-    <button class="btn btn-success" (click)="addGenre(genre)">Add Country</button>
+    <button class="btn btn-success" (click)="addGenre(genre)">Add Genre</button>
   </div>
