--- a/BookLibraryClient/src/app/dashboard/dashboard.component.html
+++ b/BookLibraryClient/src/app/dashboard/dashboard.component.html
@@ -9,7 +9,8 @@
             <h1 class="text-white">Welcome to Book Library</h1>
             <p class="lead mb-4 text-white opacity-8">We’re constantly trying to express ourselves and actualize our
               dreams. Join Us!</p>
-            <button type="submit" class="btn bg-white text-dark">Create Account</button>
+            <button type="submit" class="btn bg-white text-dark" (click)="register()">Create Account</button>
+            <button type="submit" class="btn bg-white text-dark" (click)="login()">Login</button>
             <h6 class="text-white mb-2 mt-5">Find us on</h6>
             <div class="d-flex justify-content-center">
               <a href="javascript:;"><i class="fab fa-facebook text-lg text-white me-4"></i></a>
@@ -87,7 +88,7 @@
                 Website visitors today demand a frictionless user expericence — especially when using search. Because of
                 the hight standards.
               </p>
-              <button type="button" class="btn bg-gradient-info btn-sm mb-0 mt-3">Find out more</button>
+              <button type="button" class="btn bg-gradient-info btn-sm mb-0 mt-3">Register</button>
             </div>
           </div>
         </div>
