--- a/BookLibraryClient/src/app/shared/navbar/navbar.component.html
+++ b/BookLibraryClient/src/app/shared/navbar/navbar.component.html
@@ -27,7 +27,6 @@
       </li>
     </ul>
   </nav> -->
-
   <div id="app" class="app app-header-fixed app-sidebar-fixed">
   <!-- BEGIN #header -->
   <div id="header" class="app-header">
@@ -65,25 +64,40 @@
         </div>
       </div>
       <div class="navbar-item navbar-user dropdown">
+        <ng-container *ngIf="isLogged === false && isAdminLogged === false">
+          <a href="#" class="navbar-link dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown">
+            <div class="image image-icon bg-gray-800 text-gray-600">
+              <i class="fa fa-user"></i>
+            </div>
+            <span class="d-none d-md-inline">My Profile</span>
+          </a>
+          <div class="dropdown-menu dropdown-menu-end me-1">
+            <div class="dropdown-divider"></div>
+            <a routerLink="/login" class="dropdown-item">Login</a>
+            <a routerLink="/register" class="dropdown-item">Register</a>
+          </div>
+        </ng-container>
+        <ng-container *ngIf="isLogged || isAdminLogged">
         <a href="#" class="navbar-link dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown">
           <div class="image image-icon bg-gray-800 text-gray-600">
             <i class="fa fa-user"></i>
           </div>
-          <span class="d-none d-md-inline">Hrvoje Horvat</span> <b class="caret ms-10px"></b>
+          <span class="d-none d-md-inline">{{user.firstName + ' ' + user.lastName}}</span>
         </a>
         <div class="dropdown-menu dropdown-menu-end me-1">
-          <a href="EditProfile.html" class="dropdown-item">Edit Profile</a>
-          <a href="javascript:;" class="dropdown-item"><span class="badge badge-danger float-end">2</span>
+          <a routerLink="/admin/userControl/updateUser/{{user.id!}}" class="dropdown-item">Edit Profile</a>
+          <a routerLink="/user/lastRentals/" class="dropdown-item"><span class="badge badge-danger float-end">2</span>
             My Rentlas</a>
           <a href="javascript:;" class="dropdown-item">Currently Renting</a>
           <a href="javascript:;" class="dropdown-item">Setting</a>
           <div class="dropdown-divider"></div>
-          <a href="login.html" class="dropdown-item">Log Out</a>
+          <a class="dropdown-item" (click)="logout()">Log Out</a>
         </div>
+      </ng-container>
       </div>
     </div>
     <!-- END header-nav -->
-  </div>
+  
   <!-- END #header -->
   </div>
-  
+</div>
