--- a/BookLibraryClient/src/app/shared/register/register.component.html
+++ b/BookLibraryClient/src/app/shared/register/register.component.html
@@ -48,10 +48,10 @@
 	            </label>
 	          </div>
 	          <div class="mb-4">
-	            <button type="submit" class="btn btn-primary d-block w-100 btn-lg h-45px fs-13px">Sign Up</button>
+	            <button type="submit" class="btn btn-primary d-block w-100 btn-lg h-45px fs-13px" (click)="onSubmit()">Sign Up</button>
 	          </div>
 	          <div class="mb-4 pb-5">
-	            Already a member? Click <a href="login.html">here</a> to login.
+	            Already a member? Click <a routerLink="/login"> here</a> to login.
 	          </div>
 	          <hr class="bg-gray-600 opacity-2" />
 	          <p class="text-center text-gray-600">
