--- a/BookLibraryClient/src/app/user-dashboard/components/new-arrivals/new-arrivals.component.html
+++ b/BookLibraryClient/src/app/user-dashboard/components/new-arrivals/new-arrivals.component.html
@@ -36,6 +36,6 @@
 </div>
 
 <!-- BEGIN scroll to top btn -->
-<a href="javascript:;" class="btn btn-icon btn-circle btn-success btn-scroll-to-top" data-toggle="scroll-to-top">^<i
+<a href="javascript:;" class="btn btn-icon btn-circle btn-success btn-scroll-to-top" data-toggle="scroll-to-top" (click)="scrollToTop()"><i
     class="fa fa-angle-up"></i></a>
 <!-- END scroll to top btn -->
