--- a/BookLibraryClient/src/app/user-dashboard/components/top-rentals/top-rentals.component.html
+++ b/BookLibraryClient/src/app/user-dashboard/components/top-rentals/top-rentals.component.html
@@ -72,6 +72,6 @@
 
   <!-- BEGIN scroll to top btn -->
   <a href="javascript:;" class="btn btn-icon btn-circle btn-success btn-scroll-to-top" data-toggle="scroll-to-top"
-    (click)="scrollToTop()">^<i class="fa fa-angle-up"></i></a>
+    (click)="scrollToTop()"><i class="fa fa-angle-up"></i></a>
   <!-- END scroll to top btn -->
   <div style="border-color:red; width:1000px; height:auto;"></div>
