--- a/BookLibraryClient/src/app/user-dashboard/components/user-basket/user-order-complete/user-order-complete.component.html
+++ b/BookLibraryClient/src/app/user-dashboard/components/user-basket/user-order-complete/user-order-complete.component.html
@@ -40,7 +40,7 @@
       <section id="portfolio" class="two">
 
         <section class="h-100 h-custom" style="background-color: #eee;">
-          <div class="container py-5 h-100">
+          <div class="container py-5 h-100" *ngIf="user">
             <div class="row d-flex justify-content-center align-items-center h-100">
               <div class="col">
                 <div class="card">
@@ -54,12 +54,14 @@
                       <div class="d-flex justify-content-between align-items-center mb-4">
                         <div>
                           <p class="mb-1">Shopping cart</p>
-                          <p class="mb-0">You have {{user.userBasket.books.length}} items in your cart</p>
+                          <ng-container *ngIf="user?.userBasket.books.length">
+                          <p class="mb-0">You have {{user.userBasket.books!.length!}} items in your cart</p>
+                        </ng-container>
                         </div>
 
                       </div>
 
-                      <div *ngFor="let book of user.userBasket.books" class="card mb-3">
+                      <div *ngFor="let book of user?.userBasket?.books" class="card mb-3">
                         <div class="card-body">
                           <div class="d-flex justify-content-between">
                             <div class="d-flex flex-row align-items-center">
@@ -73,7 +75,7 @@
                                 <h5 class="fw-normal mb-0">5 days</h5>
                               </div>
                               <div style="width: 80px;">
-                                <h5 class="mb-0">{{book.rentalPrice + ' ' + user.userBasket.currency}}</h5>
+                                <h5 class="mb-0" (click)="calculateOrder(book.rentalPrice!)">{{book.rentalPrice + ' ' + user.userBasket.currency}}</h5>
                               </div>
                               <a href="#!" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
                             </div>
@@ -81,7 +83,7 @@
                         </div>
                       </div>
 
-                      <button type="button" class="btn btn-gray btn-block btn-lg">Your order: {{user.userBasket.totalRentalPriceWithVAT + ' ' + user.userBasket.currency}}</button>
+                      <button type="button" class="btn btn-gray btn-block btn-lg">Your order: {{order.totalRentalPriceWithVAT}} {{' ' + user.userBasket.currency}}</button>
                       <div class="floatRight">
                         <button type="button" class="btn btn-info btn-block btn-lg" (click)="onSubmit()">
                           <div class="d-flex align-content-center">
