--- a/BookLibraryClient/src/app/admin-dashboard/components/orders/add-order/add-order.component.html
+++ b/BookLibraryClient/src/app/admin-dashboard/components/orders/add-order/add-order.component.html
@@ -3,8 +3,8 @@
   <div class="row">
     <div class="col-md-3">
       <div class="form-group">
-        <label for="order.UserId">User ID</label>
-        <input type="text" id="UserId" class="form-control" [(ngModel)]="order.UserId">
+        <label for="order.userId">User ID</label>
+        <input type="text" id="userId" class="form-control" [(ngModel)]="order.userId">
         <label for="order.date">Date</label>
         <input type="date" id="order.date" class="form-control" [(ngModel)]="order.date">
         <label for="order.totalRentalPrice">Total</label>
