--- a/BookLibraryClient/src/app/shared/sidebar/sidebar.component.html
+++ b/BookLibraryClient/src/app/shared/sidebar/sidebar.component.html
@@ -83,14 +83,23 @@
             <div class="menu-item"><a routerLink="admin" class="menu-link">
                 <div class="menu-text">Dashboard</div>
               </a></div>
-            <div class="menu-item"><a routerLink="admin/userControl" class="menu-link">
-                <div class="menu-text">All users</div>
-              </a></div>
-            <div class="menu-item"><a routerLink="admin/bookControl" class="menu-link">
+              <div class="menu-item"><a routerLink="admin/bookControl" class="menu-link">
                 <div class="menu-text">All books</div>
               </a></div>
-            <div class="menu-item"><a routerLink="admin/genreControl" class="menu-link">
-                <div class="menu-text">All genres</div>
+              <div class="menu-item"><a routerLink="admin/authorControl" class="menu-link">
+                <div class="menu-text">All authors</div>
+              </a></div>
+              <div class="menu-item"><a routerLink="admin/countryControl" class="menu-link">
+                <div class="menu-text">All countries</div>
+              </a></div>
+              <div class="menu-item"><a routerLink="admin/genreControl" class="menu-link">
+                  <div class="menu-text">All genres</div>
+                </a></div>
+                <div class="menu-item"><a routerLink="admin/languageControl" class="menu-link">
+                    <div class="menu-text">All languages</div>
+                  </a></div>
+            <div class="menu-item"><a routerLink="admin/userControl" class="menu-link">
+                <div class="menu-text">All users</div>
               </a></div>
             <div class="menu-item"><a routerLink="admin/orderControl" class="menu-link">
                 <div class="menu-text">All rentals</div>
@@ -133,35 +142,6 @@
             </ng-container>
           </div>
         </div>
-        <!-- 
-                <mat-toolbar color="primary">
-                    <span class="fill-remaining-space">
-                      <button mat-icon-button [matMenuTriggerFor]="menu" #menuTrigger="matMenuTrigger" (mouseover)="menuTrigger.openMenu()">
-                        <mat-icon>menu</mat-icon>
-                      </button>
-                      <mat-menu #menu="matMenu" [overlapTrigger]="false">
-                      <span (mouseleave)="menuTrigger.closeMenu()">
-                        <button mat-menu-item>
-                          <mat-icon>home</mat-icon>
-                          <span>Home</span>
-                    </button>
-                    <button mat-menu-item>
-                          <mat-icon>people_outline</mat-icon>
-                          <span>Connecting</span>
-                        </button>
-                    <button mat-menu-item>
-                          <mat-icon>videocam</mat-icon>
-                          <span>Let's talk</span>
-                        </button>
-                    <button mat-menu-item>
-                          <mat-icon>exit_to_app</mat-icon>
-                          <span>Logout</span>
-                        </button>
-                    </span>
-                    </mat-menu>
-                    </span>
-                    <span class="fill-remaining-space">Application Title</span>
-                  </mat-toolbar> -->
         <!-- BEGIN minify-button -->
         <div class="menu-item d-flex">
           <a href="javascript:;" class="app-sidebar-minify-btn ms-auto" data-toggle="app-sidebar-minify"><i
