--- a/BookLibraryClient/src/app/shared/login/login.component.html
+++ b/BookLibraryClient/src/app/shared/login/login.component.html
@@ -1,7 +1,7 @@
 <body class='pace-top'>
-    <ng-container *ngIf="isLoggedIn === true || isAdminLoggedIn === true">
+    <!-- <ng-container *ngIf="isLoggedIn === true || isAdminLoggedIn === true">
         <h3>Hello, proceed to app!</h3>
-    </ng-container>
+    </ng-container> -->
     <!-- BEGIN #app -->
     <div *ngIf="isLoggedIn === false && isAdminLoggedIn === false">
     <div id="app" class="app">
