--- a/BookLibraryClient/src/app/shared/navbar/navbar.component.html
+++ b/BookLibraryClient/src/app/shared/navbar/navbar.component.html
@@ -52,9 +52,9 @@
         </form>
       </div>
       <div class="navbar-item dropdown">
+        <ng-container *ngIf="user.userBasket">
         <a href="#" data-bs-toggle="dropdown" class="navbar-link dropdown-toggle fs-14px">
           <i class="fa fa-cart-plus"></i>
-          <ng-container *ngIf="isLogged === false && isAdminLogged === false"><span class="badge">0</span></ng-container>
           <ng-container *ngIf="isLogged || isAdminLogged"><span class="badge">{{user.userBasket.books.length!}}</span></ng-container>
         </a>
         <div class="dropdown-menu media-list dropdown-menu-end">
@@ -72,7 +72,21 @@
             </ng-container>
           </div>
         </div>
+      </ng-container> 
+      <ng-container *ngIf="user.userBasket! === null ">
+        <a href="#" data-bs-toggle="dropdown" class="navbar-link dropdown-toggle fs-14px">
+          <i class="fa fa-cart-plus"></i>
+          <span class="badge">0</span>
+        </a>
+        <div class="dropdown-menu media-list dropdown-menu-end">
+          <div class="dropdown-header">CART</div>
+          <div class="text-center w-300px py-3">
+            Cart is empty
+          </div>
+        </div>
+      </ng-container>
       </div>
+    
       <div class="navbar-item navbar-user dropdown">
         <ng-container *ngIf="isLogged === false && isAdminLogged === false">
           <a href="#" class="navbar-link dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown">
@@ -93,7 +107,7 @@
             <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/avatar-6.webp" class="img-fluid rounded-3"
                           style="width: 80px;" alt="Avatar">
           </div>
-          <span class="d-none d-md-inline">{{user.firstName + ' ' + user.lastName}}</span>
+          <span class="d-none d-md-inline">{{user.firstName! + ' ' + user.lastName!}}</span>
         </a>
         <div class="dropdown-menu dropdown-menu-end me-1">
           <a routerLink="/admin/userControl/updateUser/{{user.id!}}" class="dropdown-item">Edit Profile</a>
