--- a/BookLibraryClient/src/app/shared/register/register.component.html
+++ b/BookLibraryClient/src/app/shared/register/register.component.html
@@ -1,136 +1,68 @@
 <body class="pace-top">
-<!-- BEGIN #app -->
-    <div id="app" class="app">
-	  <!-- BEGIN register -->
-	  <div class="register register-with-news-feed">
-	    <!-- BEGIN news-feed -->
+	<!-- BEGIN #app -->
+	<div id="app" class="app">
+		<!-- BEGIN register -->
+		<div class="register register-with-news-feed">
+			<!-- BEGIN news-feed -->
 
-	    <!-- BEGIN register-container -->
-	    <div class="register-container">
-	      <!-- BEGIN register-header -->
-	      <div class="register-header mb-25px h1">
-	        <div class="mb-1">Sign Up</div>
-	        <small class="d-block fs-15px lh-16">Create your Book library account. It’s free and always will be.</small>
-	      </div>
-	      <!-- END register-header -->
+			<!-- BEGIN register-container -->
+			<div class="register-container">
+				<!-- BEGIN register-header -->
+				<div class="register-header mb-25px h1">
+					<div class="mb-1">Sign Up</div>
+					<small class="d-block fs-15px lh-16">Create your Book library account. It’s free and always will
+						be.</small>
+				</div>
+				<!-- END register-header -->
 
-	      <!-- BEGIN register-content -->
-	      <div class="register-content">
-	        <form action="index.html" method="GET" class="fs-13px">
-	          <div class="mb-3">
-	            <label class="mb-2">Name <span class="text-danger">*</span></label>
-	            <div class="row gx-3">
-	              <div class="col-md-6 mb-2 mb-md-0">
-	                <input type="text" class="form-control fs-13px" placeholder="First name" />
-	              </div>
-	              <div class="col-md-6">
-	                <input type="text" class="form-control fs-13px" placeholder="Last name" />
-	              </div>
-	            </div>
-	          </div>
-	          <div class="mb-3">
-	            <label class="mb-2">Email <span class="text-danger">*</span></label>
-	            <input type="text" class="form-control fs-13px" placeholder="Email address" />
-	          </div>
-	          <div class="mb-3">
-	            <label class="mb-2">Re-enter Email <span class="text-danger">*</span></label>
-	            <input type="text" class="form-control fs-13px" placeholder="Re-enter email address" />
-	          </div>
-	          <div class="mb-4">
-	            <label class="mb-2">Password <span class="text-danger">*</span></label>
-	            <input type="password" class="form-control fs-13px" placeholder="Password" />
-	          </div>
-	          <div class="form-check mb-4">
-	            <input class="form-check-input" type="checkbox" value="" id="agreementCheckbox" />
-	            <label class="form-check-label" for="agreementCheckbox">
-	              By clicking Sign Up, you agree to our <a href="javascript:;">Terms</a> and that you have read our <a
-	                href="javascript:;">Data Policy</a>, including our <a href="javascript:;">Cookie Use</a>.
-	            </label>
-	          </div>
-	          <div class="mb-4">
-	            <button type="submit" class="btn btn-primary d-block w-100 btn-lg h-45px fs-13px" (click)="onSubmit()">Sign Up</button>
-	          </div>
-	          <div class="mb-4 pb-5">
-	            Already a member? Click <a routerLink="/login"> here</a> to login.
-	          </div>
-	          <hr class="bg-gray-600 opacity-2" />
-	          <p class="text-center text-gray-600">
-	            &copy; Book Library All Right Reserved 2021
-	          </p>
-	        </form>
-	      </div>
-	      <!-- END register-content -->
-	    </div>
-	    <!-- END register-container -->
-	  </div>
-	  <!-- END register -->
-
-	  <!-- BEGIN theme-panel -->
-	  <div class="theme-panel">
-	    <a href="javascript:;" data-toggle="theme-panel-expand" class="theme-collapse-btn"><i class="fa fa-cog"></i></a>
-	    <div class="theme-panel-content" data-scrollbar="true" data-height="100%">
-	      <h5>App Settings</h5>
-	      <!-- BEGIN theme-list -->
-	      <div class="theme-list">
-	        <div class="theme-list-item"><a href="javascript:;" class="theme-list-link bg-red" data-theme="red"
-	            data-theme-file="assets/css/default/theme/red.min.css" data-toggle="theme-selector"
-	            data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-container="body" data-bs-title="Red">&nbsp;</a>
-	        </div>
-	        <div class="theme-list-item"><a href="javascript:;" class="theme-list-link bg-pink" data-theme="pink"
-	            data-theme-file="assets/css/default/theme/pink.min.css" data-toggle="theme-selector"
-	            data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-container="body" data-bs-title="Pink">&nbsp;</a>
-	        </div>
-	        <div class="theme-list-item"><a href="javascript:;" class="theme-list-link bg-orange" data-theme="orange"
-	            data-theme-file="assets/css/default/theme/orange.min.css" data-toggle="theme-selector"
-	            data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-container="body" data-bs-title="Orange">&nbsp;</a>
-	        </div>
-	        <div class="theme-list-item"><a href="javascript:;" class="theme-list-link bg-yellow" data-theme="yellow"
-	            data-theme-file="assets/css/default/theme/yellow.min.css" data-toggle="theme-selector"
-	            data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-container="body" data-bs-title="Yellow">&nbsp;</a>
-	        </div>
-	        <div class="theme-list-item"><a href="javascript:;" class="theme-list-link bg-lime" data-theme="lime"
-	            data-theme-file="assets/css/default/theme/lime.min.css" data-toggle="theme-selector"
-	            data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-container="body" data-bs-title="Lime">&nbsp;</a>
-	        </div>
-	        <div class="theme-list-item"><a href="javascript:;" class="theme-list-link bg-green" data-theme="green"
-	            data-theme-file="assets/css/default/theme/green.min.css" data-toggle="theme-selector"
-	            data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-container="body" data-bs-title="Green">&nbsp;</a>
-	        </div>
-	        <div class="theme-list-item active"><a href="javascript:;" class="theme-list-link bg-teal" data-theme="default"
-	            data-theme-file="" data-toggle="theme-selector" data-bs-toggle="tooltip" data-bs-trigger="hover"
-	            data-bs-container="body" data-bs-title="Default">&nbsp;</a></div>
-	        <div class="theme-list-item"><a href="javascript:;" class="theme-list-link bg-cyan" data-theme="cyan"
-	            data-theme-file="assets/css/default/theme/cyan.min.css" data-toggle="theme-selector"
-	            data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-container="body" data-bs-title="Cyan">&nbsp;</a>
-	        </div>
-	        <div class="theme-list-item"><a href="javascript:;" class="theme-list-link bg-blue" data-theme="blue"
-	            data-theme-file="assets/css/default/theme/blue.min.css" data-toggle="theme-selector"
-	            data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-container="body" data-bs-title="Blue">&nbsp;</a>
-	        </div>
-	        <div class="theme-list-item"><a href="javascript:;" class="theme-list-link bg-purple" data-theme="purple"
-	            data-theme-file="assets/css/default/theme/purple.min.css" data-toggle="theme-selector"
-	            data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-container="body" data-bs-title="Purple">&nbsp;</a>
-	        </div>
-	        <div class="theme-list-item"><a href="javascript:;" class="theme-list-link bg-indigo" data-theme="indigo"
-	            data-theme-file="assets/css/default/theme/indigo.min.css" data-toggle="theme-selector"
-	            data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-container="body" data-bs-title="Indigo">&nbsp;</a>
-	        </div>
-	        <div class="theme-list-item"><a href="javascript:;" class="theme-list-link bg-black" data-theme="black"
-	            data-theme-file="assets/css/default/theme/black.min.css" data-toggle="theme-selector"
-	            data-bs-toggle="tooltip" data-bs-trigger="hover" data-bs-container="body" data-bs-title="Black">&nbsp;</a>
-	        </div>
-	      </div>
-	      <!-- END theme-list -->
-	      <div class="theme-panel-divider"></div>
-	      <!-- END theme-panel -->
-	    </div>
-	    <!-- END #app -->
-
-	    <!-- ================== BEGIN core-js ================== -->
-	    <script src="assets/js/vendor.min.js"></script>
-	    <script src="assets/js/app.min.js"></script>
-	    <script src="assets/js/theme/default.min.js"></script>
-	    <!-- ================== END core-js ================== -->
-	  </div>
+				<!-- BEGIN register-content -->
+				<div class="register-content">
+					<form action="" method="POST" class="fs-13px">
+						<div class="mb-3">
+							<label class="mb-2" for="user.firstName">First Name<span class="text-danger">*</span></label>
+							<input type="text" name="user.firstName" class="form-control fs-13px" placeholder="First Name" [(ngModel)]="user.firstName"/>
+						</div>
+						<div class="mb-3">
+							<label class="mb-2" for="user.lastName">Last Name<span class="text-danger">*</span></label>
+							<input type="text" name="user.lastName" class="form-control fs-13px" placeholder="Last Name" [(ngModel)]="user.lastName"/>
+						</div>
+						<div class="mb-3">
+							<label class="mb-2" for="user.username">Username<span class="text-danger">*</span></label>
+							<input type="text" name="user.username" class="form-control fs-13px" placeholder="Username"[(ngModel)]="user.username" />
+						</div>
+						<div class="mb-3">
+							<label class="mb-2" for="user.password">Password<span class="text-danger">*</span></label>
+							<input type="password" name="user.password" class="form-control fs-13px" placeholder="Password" [(ngModel)]="user.password"/>
+						</div>
+						<div class="mb-3">
+							<label class="mb-2" for="user.dateOfBirth">Date of Birth <span class="text-danger">*</span></label>
+							<input type="date" name="user.dateOfBirth" class="form-control fs-13px" placeholder="date" [(ngModel)]="user.dateOfBirth"/>
+						</div>
+						<div class="mb-4">
+							<label class="mb-2" for="user.address">Address <span class="text-danger">*</span></label>
+							<input type="text" name="user.address" class="form-control fs-13px" placeholder="Address" [(ngModel)]="user.address"/>
+						</div>
+						<div class="form-check mb-4">
+							<input class="form-check-input" type="checkbox" value="" id="agreementCheckbox" />
+							<label class="form-check-label" for="agreementCheckbox">
+								By clicking Sign Up, you agree to our <a href="javascript:;">Terms</a> and that you have
+								read our <a href="javascript:;">Data Policy</a>, including our <a
+									href="javascript:;">Cookie Use</a>.
+							</label>
+						</div>
+						<div class="mb-4">
+							<button type="submit" class="btn btn-primary d-block w-100 btn-lg h-45px fs-13px"
+								(click)="onSubmit()">Sign Up</button>
+						</div>
+						<div class="mb-4 pb-5">
+							Already a member? Click <a routerLink="/login"> here</a> to login.
+						</div>
+					</form>
+				</div>
+				<!-- END register-content -->
+			</div>
+			<!-- END register-container -->
+		</div>
+		<!-- END register -->
 	</div>
 </body>
